[gd_scene load_steps=4 format=3 uid="uid://c2qb1lhdrail3"]

[ext_resource type="Script" uid="uid://cbmm4qplwm12h" path="res://pkarr/godot/examples/control.gd" id="1_0fbet"]
[ext_resource type="Script" uid="uid://b1hvxmg5qhl1e" path="res://pkarr/godot/examples/button_3.gd" id="2_62e2m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_202ya"]
bg_color = Color(0.84209746, 0.5075795, 0.20788595, 1)

[node name="pkarr" type="Control" unique_id=2047913361]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0fbet")

[node name="Panel" type="Panel" parent="." unique_id=760642671]
layout_mode = 1
offset_right = 918.0
offset_bottom = 664.0
theme_override_styles/panel = SubResource("StyleBoxFlat_202ya")

[node name="Peerinfo" type="PkarrGodot" parent="." unique_id=1398557453]

[node name="Label" type="Label" parent="." unique_id=1042945131]
layout_mode = 0
offset_left = 638.0
offset_top = 3.0
offset_right = 897.0
offset_bottom = 647.0
text = "
"
autowrap_mode = 3

[node name="publicar" type="Label" parent="." unique_id=1919282002]
layout_mode = 0
offset_left = 34.0
offset_top = 442.0
offset_right = 362.0
offset_bottom = 465.0

[node name="Label3" type="Label" parent="." unique_id=1191183825]
layout_mode = 0
offset_left = 16.0
offset_top = 454.0
offset_right = 809.0
offset_bottom = 511.0
text_overrun_behavior = 2

[node name="resolver" type="Button" parent="." unique_id=1294390798]
layout_mode = 0
offset_right = 151.0
offset_bottom = 95.0
text = "resolver"

[node name="pubicar" type="Button" parent="." unique_id=108340976]
layout_mode = 0
offset_left = 166.0
offset_right = 312.0
offset_bottom = 93.0
text = "publish"

[node name="Button3" type="Button" parent="." unique_id=1918945787]
layout_mode = 0
offset_left = 8.0
offset_top = 104.0
offset_right = 50.0
offset_bottom = 135.0
text = "hola"
script = ExtResource("2_62e2m")

[node name="Label" type="Label" parent="Button3" unique_id=766373961]
layout_mode = 0
offset_left = 51.0
offset_right = 74.0
offset_bottom = 29.0
text = "0"

[node name="CodeEdit" type="CodeEdit" parent="." unique_id=1416341560]
layout_mode = 0
offset_left = 94.0
offset_top = 163.0
offset_right = 627.0
offset_bottom = 216.0
text = "tkucztxt7xhrb41miqb7xknhijngpgy7tyhete15ycok7naaonsy"
placeholder_text = "public key"

[node name="mode" type="CodeEdit" parent="." unique_id=432487802]
layout_mode = 0
offset_left = 5.0
offset_top = 163.0
offset_right = 87.0
offset_bottom = 219.0
text = "dht"
placeholder_text = "\"dht\" or \"relays\""

[node name="clave" type="LineEdit" parent="." unique_id=758025099]
layout_mode = 0
offset_left = 41.0
offset_top = 252.0
offset_right = 289.0
offset_bottom = 328.0
text = "Godot"
placeholder_text = "clave de la llave"

[node name="valor" type="LineEdit" parent="." unique_id=1141046271]
layout_mode = 0
offset_left = 45.0
offset_top = 341.0
offset_right = 283.0
offset_bottom = 413.0
text = "Pkarr_in_rust"
placeholder_text = "valor de llave"
max_length = 999

[node name="exit" type="Button" parent="." unique_id=89252003]
layout_mode = 0
offset_left = 382.0
offset_top = -2.0
offset_right = 520.0
offset_bottom = 74.0
text = "exit"

[node name="crea key" type="Button" parent="." unique_id=1668977059]
layout_mode = 0
offset_left = 400.0
offset_top = 88.0
offset_right = 477.0
offset_bottom = 119.0
text = "crea key "

[node name="save key" type="Button" parent="." unique_id=131235780]
layout_mode = 0
offset_left = 401.0
offset_top = 129.0
offset_right = 475.0
offset_bottom = 160.0
text = "save key"

[node name="time_ttl" type="HSlider" parent="." unique_id=600960404]
layout_mode = 0
offset_left = 94.0
offset_top = 221.0
offset_right = 625.0
offset_bottom = 237.0
min_value = 30.0
max_value = 3600.0
step = 10.0
value = 30.0
rounded = true
tick_count = 50
ticks_on_borders = true

[node name="count_timer" type="Label" parent="." unique_id=2101664176]
layout_mode = 0
offset_left = 25.0
offset_top = 218.0
offset_right = 83.0
offset_bottom = 249.0

[connection signal="pressed" from="resolver" to="." method="_on_button_pressed"]
[connection signal="pressed" from="pubicar" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="crea key" to="." method="_on_crea_key_pressed"]
[connection signal="pressed" from="save key" to="." method="_on_save_key_pressed"]
[connection signal="value_changed" from="time_ttl" to="." method="_on_time_ttl_value_changed"]
